objects/ASI_CRM_Sub_Brand_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Incentive_for_PSF__c</fullName>
        <label>Incentive for PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Max_GS_MOT_Percent__c</fullName>
        <label>Max GS% (MOT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Max_GS_Percent_TOT__c</fullName>
        <label>Max GS% (TOT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Max_Incentive_for_PSF__c</fullName>
        <label>Max Incentive for PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Max_Rebate_Percent__c</fullName>
        <label>Max Rebate%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_New_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Bar/	酒吧 
BulkPurchase 
Cash &amp; Carry 
Convenience Store Chain 
Department Store 
E-Commerce 
FKTV 
Grocery 
Hotel/酒店 
Hypermarket 
KTV 
Liquor Store(WS Store) 
Nightclub/俱乐部酒吧 
Restaurant/餐厅 
Supermarket 
VIP 
Wine Shop</inlineHelpText>
        <label>New Channel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_CN_Channel__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN New Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Sub-Brand Lines</relationshipLabel>
        <relationshipName>Sub_Brand_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Rebate_Percent__c</fullName>
        <label>Rebate%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Region</fullName>
                </value>
                <value>
                    <fullName>North Region</fullName>
                </value>
                <value>
                    <fullName>South Region</fullName>
                </value>
                <value>
                    <fullName>East Region</fullName>
                </value>
                <value>
                    <fullName>South West Region</fullName>
                </value>
                <value>
                    <fullName>North West Region</fullName>
                </value>
                <value>
                    <fullName>Headquarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CR12_Conversion_Factor__c</fullName>
        <label>CR12 Extra Conversion Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Commercial_Team__c</fullName>
        <label>Commercial Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand__c</fullName>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Sub-Brand Lines</relationshipLabel>
        <relationshipName>ASI_CRM_CR12_Factors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sub-Brand Line</label>
    <nameField>
        <displayFormat>CR12-{000000}</displayFormat>
        <label>Sub-Brand Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub-Brand Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sub_Brand_Line</fullName>
        <active>true</active>
        <label>CN Sub-Brand Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Sub_brand_Line_Promotion</fullName>
        <active>true</active>
        <label>CN Sub-brand Line (Promotion)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>